--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <span class="section-heading-lower">Worth getting to know me</span>
                         </h2>
                         <p class="mb-3">I'm really bad with answering questions. Usually, I don't even answer them. I try to find inspiration inside of the question. I think, and I jump from one beam of inspiration or energy to the next, as opposed to explaining the energy.</p>
-                        <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="https://www.yeezysupply.com/">Buy my shoes here</a></div>
+                        <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="https://stockx.com/adidas/yeezy">Buy my shoes here</a></div>
                     </div>
                 </div>
             </div>
